[metadata]
name = rpl
author = Reuben Thomas
author_email = rrt@sc3d.org
home_page = https://github.com/rrthomas/rpl
version = 1.15rc1
description = Replace strings in files
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL v3 or later
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3

[options]
scripts = rpl
python_requires = >=3.7
setup_requires =
    argparse-manpage
    pytest-executable
install_requires =
    regex
    chardet

[build_manpages]
manpages = rpl.1
